# dipc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CMakeModules/: BoostExternalProject.cmake  DipcCDTMacros.cmake  DipcWasmToolchain.cmake  InstallCDT.cmake  LLVMExternalProject.cmake  LibrariesExternalProject.cmake  ToolsExternalProject.cmake  cmake_uninstall.cmake  dipc.cdt-config.cmake  test.cmake.in  test.txt
gtest/: AddrestTest.cpp  CMakeLists.txt  main.cpp
libraries/: CMakeLists.txt
libraries/dipclib/include/dipc/: RLP.h  assert.h  common.h  contract.hpp  datastream.h  deployedcontract.hpp  dipc.hpp  event.hpp  exception.h  fixedhash.hpp  name.hpp  print.h  print.hpp  serialize.hpp  state.hpp  storage.hpp  storagetype.hpp  txencode.hpp  vector_ref.h
libraries/dipclib/include/dipc/db/: array.hpp  list.hpp  map.hpp
libraries/libc/: CMakeLists.txt
libraries/libc++/: CMakeLists.txt
libraries/libc/musl/src/stdio/: __stdio_write.c
libraries/native/: CMakeLists.txt
libraries/native/softfloat/: CMakeCache.txt  CMakeLists.txt
libraries/rt/: CMakeLists.txt  CMakeLists2.txt  compiler_builtins.cpp  compiler_builtins.hpp
testcontract/PasswordManage/: PasswordManage.cpp  PasswordManage.hpp
testcontract/PaymentChannel/: PaymentChannel.cpp  PaymentChannel.cpp.abi.json  PaymentChannel.hpp  PaymentChannel.wasm
testcontract/PortfolioManage/: CMakeLists.txt  PortfolioManage.cpp  PortfolioManage.hpp  test.cpp  test2.cpp
testcontract/buildins/: buildins.cpp  buildins.hpp
testcontract/call/: README.txt  call.cpp  call.cpp.abi.json  call.hpp  call.wasm
testcontract/convert/: convert.cpp
testcontract/cppfile/: testcontract.cpp  testcontract.hpp
testcontract/cppfile/event/: README.txt  event.cpp  event.cpp.abi.json  event.hpp  event.wasm
testcontract/cppfile/testReturnMacro/: returnMacro.cpp  returnMacro.cpp.abi.json  returnMacro.hpp  returnMacro.wasm
testcontract/cppfile/teststdlib/: testchar.cpp  testchar.cpp.abi.json  testchar.hpp  testchar.wasm  testchar.wat  teststring.cpp  teststring.hpp  teststring.wasm  teststring.wat
testcontract/demo/: README.txt  demo.cpp  demo.hpp
testcontract/democ/: token.cpp  token.cpp.abi.json  token.wasm
testcontract/fibonacciBalance/: README.txt  fibonacci.wasm  fibonacciBalance.cpp  fibonacciBalance.cpp.abi.json  fibonacciBalance.hpp
testcontract/fibonacciLib/: README.txt  fibonacci.wasm  fibonacciLib.cpp  fibonacciLib.cpp.abi.json  fibonacciLib.hpp
testcontract/mapString/: README.txt  mapString.cpp  mapString.cpp.abi.json  mapString.hpp  mapString.wasm
testcontract/newtoken/: README.txt  newtoken.cpp  newtoken.cpp.abi.json  newtoken.hpp  newtoken.wasm  token.wasm
testcontract/test/: test.cpp
testcontract/testBool/: testBool.cpp  testBool.cpp.abi.json  testBool.hpp  testBool.wasm
testcontract/token/: token.cpp  token.hpp
testcontract/token-bestnew/: test.cpp  test2.cpp  token.cpp  token.cpp.abi.json  token.hpp  token2.wasm
testcontract/token-log/: token-o.wasm  token.cpp  token.cpp.abi.json  token.hpp  token2.wasm  tokenbak.cpp  tokenbak.wasm  tokenk.wasm
testcontract/token-new/: token.cpp  token.hpp
testcontract/token-overload/: token.cpp  token.cpp.abi.json  token.hpp  token.wasm
testcontract/token-overloadOwn/: token.cpp  token.cpp.abi.json  token.hpp  token.wasm  tokentest.cpp  tokenwasm.cpp
testcontract/token-param/: token.cpp  token.hpp  token.wasm
testcontract/token-payable/: token-payable.cpp  token-payable.hpp  token.wasm
testcontract/token-test/: token copy 2.cpp  token copy.cpp  token.hpp  token.wasm
testcontract/token-windows/: token-w.wasm  token.cpp.abi.json
testcontract/tokenConstant/: token.cpp  token.hpp
testcontract/tokenConstant/token/: token-error.cpp  token-error.hpp  token.cpp  tokenTest.cpp
testcontract/vm_performance/loop_divadd_10M/: loop_divadd_10M.cpp  loop_divadd_10M.cpp.abi.json  loop_divadd_10M.hpp  loop_divadd_10M.wasm
tools/: CMakeLists.txt
tools/abi/: AbiDef.h  AbiGenerator.cpp  AbiGenerator.h  AbiJson.cpp  AbiJson.h  AbiMacro.cpp  AbiMacro.h  CMakeLists.txt  Common.h  Template.cpp  Template.h  main copy.cpp  main.cpp
tools/common/: CMakeLists.txt  Log.cpp  StringUtil.cpp
tools/cpp/: CMakeLists.txt  dipc-cpp.cpp
tools/include/: ClassImplCheck.h  Exception.h  Log.h  StringUtil.h  options.hpp
tools/include/dipc/: utils.hpp
tools/init/: CMakeLists.txt  dipc-init.cpp
tools/ld/: CMakeLists.txt  dipc-ld.cpp
